# MMseqs2

./: .cirrus.yml  .dockerignore  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  EM.md  EM_abundance.md  EM_paper.md  EM_reclassify.md  LICENSE.md  NEW0423_reclassify.md  README.md  appveyor.yml  azure-pipelines.yml  countNUM.py  ideas.md  old.md  reclassify.md  reclassify0403.md  userguide.tex
c/: Cargo.toml  README.md  align_prefix.c  cbindgen.toml
data/: CMakeLists.txt  CovSeqidQscPercMinDiag.out  DB.fasta  Library255_may17.lib  PAM10.out  PAM100.out  PAM110.out  PAM120.out  PAM130.out  PAM140.out  PAM150.out  PAM160.out  PAM170.out  PAM180.out  PAM190.out  PAM20.out  PAM30.out  PAM40.out  PAM50.out  PAM60.out  PAM70.out  PAM80.out  PAM90.out  VTML10.out  VTML120.out  VTML160.out  VTML20.out  VTML200.out  VTML40.out  VTML80.out  aggregateSearch.sh  assembler.sh  blastn.sh  blastp.sh  blastpgp.sh  blosum100.out  blosum30.out  blosum35.out  blosum40.out  blosum45.mat  (+43 more)
data/resources/: CMakeLists.txt  CovSeqidQscPercMinDiagTargetCov.lib  ExpOpt3_8_polished.cs32.lib  libPolished_8.lib  libPure_blosum62_255.lib  libPure_blosum62_32.lib  result_viz_prelude.html.zst
data/workflow/: CMakeLists.txt  blastn.sh  blastp.sh  blastpgp.sh  cascaded_clustering.sh  clustering.sh  createindex.sh  createtaxdb.sh  databases.sh  easyalignproteome.sh  easycluster.sh  easyproteomecluster.sh  easyproteomesearch.sh  easyrbh.sh  easysearch.sh  easytaxonomy.sh  enrich.sh  iterativepp.sh  lcaapprox2blca.sh  lcatophit.sh  linclust.sh  linsearch.sh  multihitdb.sh  multihitsearch.sh  nucleotide_clustering.sh  pickconsensusrep.sh  rbh.sh  searchslicedtargetprofile.sh  searchtargetprofile.sh  taxonomy.sh  taxpercontig.sh  translated_search.sh  tsv2exprofiledb.sh  update_clustering.sh
lib/alp/: CMakeLists.txt  LICENSE  njn_approx.hpp  njn_doubletype.hpp  njn_dynprogprob.cpp  njn_dynprogprob.hpp  njn_dynprogproblim.cpp  njn_dynprogproblim.hpp  njn_dynprogprobproto.cpp  njn_dynprogprobproto.hpp  njn_function.hpp  njn_integer.hpp  njn_ioutil.cpp  njn_ioutil.hpp  njn_localmaxstat.cpp  njn_localmaxstat.hpp  njn_localmaxstatmatrix.cpp  njn_localmaxstatmatrix.hpp  njn_localmaxstatutil.cpp  njn_localmaxstatutil.hpp  njn_matrix.hpp  njn_memutil.hpp  njn_random.cpp  njn_random.hpp  njn_root.hpp  njn_uniform.hpp  njn_vector.hpp  readme.txt  sls_alignment_evaluer.cpp  sls_alignment_evaluer.hpp  sls_alp.cpp  sls_alp.hpp  sls_alp_data.cpp  sls_alp_data.hpp  sls_alp_regression.cpp  sls_alp_regression.hpp  sls_alp_sim.cpp  sls_alp_sim.hpp  sls_basic.cpp  sls_basic.hpp  (+3 more)
lib/block-aligner/: .gitignore  Cargo.toml  LICENSE  README.md
src/: CMakeLists.txt  CommandDeclarations.h  MMseqsBase.cpp  Makefile  blosum.cu  config.hpp  convert.cuh  cudasw4.cuh  custom_score_types.cuh  dbdata.hpp  gapless_kernel_config.cuh  kernelhelpers.cuh  lib.rs  makedb.cpp  mathops.cuh  mmseqs.cpp  options.cpp  options.hpp  pssm.cuh  pssmkernels_gapless.cuh  pssmkernels_gapless_instantiation_dpx.cu  pssmkernels_gapless_instantiation_half2.cu  pssmkernels_gapless_instantiation_half2_kernelparamzero.cu  pssmkernels_gapless_int8.cuh  pssmkernels_smithwaterman.cuh  pssmkernels_smithwaterman_instantiation_dpx.cu  ptx_wrappers.cuh  sequence_io.cpp  sse2.rs  target_subject_ids.cuh  tileconfigsearch.cu  types.hpp  util.cuh
src/alignment/: Align2clust copy.cpp  Align2clust.cpp  Alignment.cpp  Alignment.h  BandedNucleotideAligner.cpp  BandedNucleotideAligner.h  BlastScoreUtils.cpp  BlastScoreUtils.h  BlockAligner.cpp  BlockAligner.h  CMakeLists.txt  CompressedA3M.cpp  CompressedA3M.h  DistanceCalculator.cpp  DistanceCalculator.h  EvalueComputation.h  Fwbw.cpp  Fwbw.h  Main.cpp  Makefile  Matcher.cpp  Matcher.h  MsaFilter.cpp  MsaFilter.h  MultipleAlignment.cpp  MultipleAlignment.h  PSSM.cpp  PSSM.h  PSSMCalculator.cpp  PSSMCalculator.h  PSSMMasker.h  StripedSmithWaterman.cpp  StripedSmithWaterman.h  params.h  rescorediagonal.cpp  run_sw.cpp  smith_waterman_sse2.C  smith_waterman_sse2.cpp  smith_waterman_sse2.h
src/clustering/: AffinityClustering.cpp  AffinityClustering.h  AlignmentSymmetry.cpp  AlignmentSymmetry.h  CMakeLists.txt  Clustering.cpp  Clustering.h  ClusteringAlgorithms.cpp  ClusteringAlgorithms.h  CompareGOTerms.cpp  CompareGOTerms.h  DistanceCalculator.cpp  DistanceCalculator.h  LinearMultiArray.h  Main.cpp  Makefile  SetCover.cpp  SetCover.h  SetCover2.cpp  SetCover2.h  SetCover3.cpp  SetCover3.h  SetCover4.cpp  SetCover4.h  SetElement.h  SimpleClustering.cpp  SimpleClustering.h  SimpleClustering2.cpp  SimpleClustering2.h  kClust2_cluster
src/commons/: A3MReader.cpp  A3MReader.h  AminoAcidLookupTables.h  Application.cpp  BacktraceTranslator.h  BaseMatrix.cpp  BaseMatrix.h  ByteParser.h  CMakeLists.txt  CSProfile.cpp  CSProfile.h  CacheFriendlyOperations.cpp  CacheFriendlyOperations.h  ClusterSpecies.cpp  ClusterSpecies.h  Command.cpp  Command.h  CommandCaller.cpp  CommandCaller.h  CommandDeclarations.h  Concat.h  CountInt32Array.cpp  CountInt32Array.h  CpuInfo.h  DBConcat.cpp  DBConcat.h  DBReader.cpp  DBReader.h  DBWriter.cpp  DBWriter.h  Debug.cpp  Debug.h  Domain.h  DownloadDatabase.h  ExpressionParser.cpp  ExpressionParser.h  FastSort.h  FileUtil.cpp  FileUtil.h  GpuUtil.cpp  (+64 more)
src/hmmalignment/: Viterbirunner.h
src/kseqpp/: filereader.hpp  gziphelpers.hpp  kseqpp.hpp
src/linclust/: CMakeLists.txt  KmerIndex.h  LinsearchIndexReader.cpp  LinsearchIndexReader.h  MarkovKmerScore.h  kmerindexdb.cpp  kmermatcher.cpp  kmermatcher.h  kmersearch.cpp  kmersearch.h
src/mmseqs/: Makefile  mmseqs.cpp
src/module1/: .IndexTable.h.swp  .TestReduceMatrix.cpp.swp  AbstactMatrix.h  BaseMatrix.cpp  BaseMatrix.h  DBReader.cpp  DBReader.h  DBTester.cpp  DBWriter.cpp  DBWriter.h  DynamicArray.cpp  DynamicArray.h  ExtendedSubstitutionMatrix.cpp  ExtendedSubstitutionMatrix.h  IndexTable.cpp  IndexTable.h  IndexTableTester.cpp  Indexer.cpp  Indexer.h  KmerGenerator.cpp  KmerGenerator.h  Main.cpp  Makefile  QueryScore.cpp  QueryScore.h  QueryScoreGlobal.cpp  QueryScoreGlobal.h  QueryScoreSSE.cpp  QueryScoreSSE.h  (+24 more)
(+799 files in other folders)
